modified html and css

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 
 <body>
     <div class="container">
-        <h1>colorful Cupcakes</h1>
+        <h1 id="heading">Colorful Cupcakes</h1>
         <div class="header">
 
         </div>
         <div class="subjects">
-            <h2>Favourite cupcakes</h2>
+            <h2 id="heading">Favourite cupcakes</h2>
             <div class="favourites">
                 <div class="cupcake_box cupcake1 ">
-                    <h2>Cupcake 1</h2>
-                    <div class="cupcake">
-
-                        <img width="50" class="flex1 img" 
+                    <div id="it">
+                    <img width="50" class="flex1" 
                             src="https://cupcakeipsum.com/images/green_muffin.png" alt=""
-                            srcset="">
-
+                            srcset="" class="cupcake">
+                    <h2 id="c1">Cupcake 1</h2>
+                    </div>
+                        
                         <div class="description flex2 pl1">
                             Powder topping candy canes cookie oat cake topping marzipan chocolate. Carrot cake toffee
                             jelly-o chupa chups sweet roll bonbon croissant danish lemon drops. Croissant sesame snaps
@@ -38,6 +38,7 @@
                         </div>
                     </div>
                 </div>
+                
                 <div class="cupcake_box cupcake2">
                     <h2>Cupcake 2</h2>
                     <div class="cupcake">
