modified html and css

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <script>
+        const currentTime = new Date();
+       console.log(currentTime)
+      </script>
 </head>
 
 <body>
@@ -30,7 +34,7 @@
                             biscuit. Bonbon wafer dessert shortbread carrot cake gingerbread croissant donut apple pie.
                             Pastry cotton candy sesame snaps bear claw jelly-o jelly beans. Cake apple pie sweet roll
                             cookie toffee apple pie ice cream. Candy dragée soufflé topping gummi bears. Soufflé bonbon
-                            gummi bears macaroon bear claw dragée apple pie cake.
+                            gummi bears macaroon bear claw dragée apple pie cake. 
                     </div>
                 </div>
             </div>
